src/css/weave.css
/* ... */
.ui.button:hover {
	background-color: lightgrey;
}

.ui.button:focus {
	background-color: #ECECEC;
	border-color: #85B7D9;
}

/******* Dropdown *****/

.ui.multiple.dropdown>.label {
	display: inline-flex;
	align-items: center;
	background: none;
}

.ui.multiple.dropdown>.label:hover {
	background: lightgrey;
}

.ui.selection.dropdown .menu {
	border-top-style: dashed;
	border-bottom-style: solid;
	border-top-width: 1!important;
}

.ui.upward.selection.dropdown .menu {
	border-top-style: solid;
	border-bottom-style: dashed;
	border-bottom-width: 1!important;
}

.ui.dropdown .menu>.header {
	padding-left: 4;
}

/******* grid *********/

.ui.grid {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
	padding: 0;
	 margin: 0;
}

.ui.grid>* {
	padding-left: 0px;
	padding-right: 8px;
}

.ui.grid>.column:not(.row) {
	padding-top: 4px;
	padding-bottom: 4px;
}

.ui.grid>.column:not(.row), .ui.grid>.row>.column {
	position: relative;
	display: inline-block;
	padding-left: 0px;
	padding-right: 8px;
	vertical-align: middle;
}

.ui.grid>.column:not(.row), .ui.grid>.row>.column {
	position: relative;
	display: inline-block;
	padding-left: 0px;
	padding-right: 8px;
	vertical-align: middle;
}

/****** Accordion *******/
.ui.styled.accordion {
	border-radius: 2px;
	background: none;
	width:100%;
	box-shadow:none;
}

.ui.styled.accordion .title {
	padding: 0px;
	padding-top: 1em;
}

.ui.styled.accordion .content {
	padding: .5em 0em 1em 1em;
}

/****** Dimmer ********/
.ui.dimmer {
	background-color: rgba(0,0,0,.5);
}

/****** Warning ******/
.ui.input.warning input {
	background-color: #FFFAF3;
	border-color: #C9BA9B;
	color: #794B02;
	box-shadow: none;
}

/****** Modal *******/
.ui.mini.modal {
	width: 400px;
	margin: 0 0 0 -200px;
}

.weave-dropzone-file {
	width: 100%;
	height: 100%;
	background: whitesmoke;
	border: dashed black 1px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.weave-dropzone-file-error {
	width: 100%;
	height: 100%;
	background: #FFF6F6;
	border: dashed #E0B4B4 1px;
	display: flex;
	justify-content: center;
	align-items: center;
}

